--- a/src/includes/modules/food-list/var-food-list.pug
+++ b/src/includes/modules/food-list/var-food-list.pug
@@ -4,6 +4,7 @@
     let foodItems = [
         {
             img: 'img/food-list-1.jpg',
+            webp: 'img/food-list-1.webp',
             imgAlt: 'Для взрослых собак',
             title: 'Для взрослых собак',
             desc: 'Индейка/Говядина',
@@ -14,6 +15,7 @@
         },
         {
             img: 'img/food-list-2.jpg',
+            webp: 'img/food-list-2.webp',
             imgAlt: 'Для щенков',
             title: 'Для щенков',
             desc: 'Индейка/Говядина',
@@ -24,6 +26,7 @@
         },
         {
             img: 'img/food-list-3.jpg',
+            webp: 'img/food-list-3.webp',
             imgAlt: 'Для взрослых собак',
             title: 'Для взрослых собак',
             desc: 'Баранина/Кролик',
@@ -34,6 +37,7 @@
         },
         {
             img: 'img/food-list-4.jpg',
+            webp: 'img/food-list-4.webp',
             imgAlt: 'Для щенков',
             title: 'Для щенков',
             desc: 'Баранина/Кролик',
