--- a/src/includes/modules/lovezoo-section/lovezoo-section.pug
+++ b/src/includes/modules/lovezoo-section/lovezoo-section.pug
@@ -4,14 +4,22 @@ section.section-full.section-full__lovezoo
             .section-full__column
                 .section-full__collage
                     .section-full__collage-item
-                        img(src="./img/img-collage-1.jpg", alt="")
+                        picture
+                            source(srcset="./img/img-collage-1.webp", type="image/webp")
+                            img(src="./img/img-collage-1.jpg", alt="")
                     .section-full__collage-item
-                        img(src="./img/img-collage-2.jpg", alt="")
+                        picture
+                            source(srcset="./img/img-collage-2.webp", type="image/webp")
+                            img(src="./img/img-collage-2.jpg", alt="")
                     .section-full__collage-icons
                         .section-full__collage-icon
-                            img(src="./img/head-dog.png", alt="")
+                            picture
+                                source(srcset="./img/head-dog.webp", type="image/webp")
+                                img(src="./img/head-dog.png", alt="")
                         .section-full__collage-icon
-                            img(src="./img/heart.png", alt="")
+                            picture
+                                source(srcset="./img/heart.webp", type="image/webp")
+                                img(src="./img/heart.png", alt="")
             .section-full__column
                 h2 С заботой и любовь от Zooov
                 p Мы сами владельцы собак и знаем, как важно правильное и качественное питание для долгой и счастливой жизни вашего питомца. Для нас ZOOOV это не просто бизнес, это наш вклад в повышение качества жизни всех собак.
