--- a/src/includes/modules/popups/specification-popup/specification-popup.pug
+++ b/src/includes/modules/popups/specification-popup/specification-popup.pug
@@ -8,8 +8,8 @@ include var-specification-popup
         .food-list__item
             .food-list__item-img
                 picture
-                    source(srcset, type="image/webp")
-                    img(src, alt="")
+                    source(srcset="", type="image/webp")
+                    img(src="", alt="")
             .food-list__item-text
                 .food-list__item-title
                 .food-list__item-desc
