--- a/src/includes/modules/contact-section/contact-section.pug
+++ b/src/includes/modules/contact-section/contact-section.pug
@@ -13,17 +13,26 @@ section.section-full.section-full__contact
                     +button(btnTG)
                 p!= 'Подписывайтесь на наш <a href="##">Instagram</a> и следите за новостями'
                 .section-full__imgbox.section-full__imgbox-dog
-                    img(src="./../img/contact-head-dog.png", alt="")
+                    picture
+                        source(srcset="./img/contact-head-dog.webp", type="picture/webp")
+                        img(src="./img/contact-head-dog.png", alt="")
                 .section-full__imgbox.section-full__imgbox-meat
-                    img(src="./../img/meat.png", alt="")
+                    picture
+                        source(srcset="./img/meat.webp", type="picture/webp")
+                        img(src="./img/meat.png", alt="")
                     .section-full__imgbox.section-full__imgbox-light
-                        img(src="./../img/svg/light.svg", alt="")
+                        picture
+                            source(srcset="./img/light.webp", type="picture/webp")
+                            img(src="./img/svg/light.svg", alt="")
             .section-full__column.js-scroll
                 h4 Остались вопросы?
                 .section-full__desc Напишите нам и мы обязательно подробно на них ответим.
                 include ./../form-contact/form-contact
                 .section-full__imgbox.section-full__imgbox-apple
-                    img(src="./../img/apple.png", alt="")
+                    picture
+                        source(srcset="./img/light.webp", type="picture/webp")
+                        img(src="./img/svg/apple.svg", alt="")
+                        img(src="./img/apple.png", alt="")
 
 
     .section-full__imgbox.section-full__imgbox-left
