fix picture bug

--- a/src/includes/modules/contact-section/contact-section.pug
+++ b/src/includes/modules/contact-section/contact-section.pug
@@ -21,29 +21,26 @@ section.section-full.section-full__contact
                         source(srcset="./img/meat.webp", type="picture/webp")
                         img(src="./img/meat.png", alt="")
                     .section-full__imgbox.section-full__imgbox-light
-                        picture
-                            source(srcset="./img/light.webp", type="picture/webp")
-                            img(src="./img/svg/light.svg", alt="")
+                        img(src="./img/svg/light.svg", alt="")
             .section-full__column.js-scroll
                 h4 Остались вопросы?
                 .section-full__desc Напишите нам и мы обязательно подробно на них ответим.
                 include ./../form-contact/form-contact
                 .section-full__imgbox.section-full__imgbox-apple
                     picture
-                        source(srcset="./img/light.webp", type="picture/webp")
-                        img(src="./img/svg/apple.svg", alt="")
+                        source(srcset="./img/apple.webp", type="picture/webp")
                         img(src="./img/apple.png", alt="")
 
 
     .section-full__imgbox.section-full__imgbox-left
-        img(src="./../img/svg/contact-vector-left.svg", alt="")
+        img(src="./img/svg/contact-vector-left.svg", alt="")
         .section-full__imgbox.section-full__imgbox-light
-            img(src="./../img/svg/light.svg", alt="")
+            img(src="./img/svg/light.svg", alt="")
     .section-full__imgbox.section-full__imgbox-right
-        img(src="./../img/svg/contact-vector-right.svg", alt="")
+        img(src="./img/svg/contact-vector-right.svg", alt="")
         .section-full__imgbox.section-full__imgbox-light
-            img(src="./../img/svg/light.svg", alt="")
+            img(src="./img/svg/light.svg", alt="")
     .section-full__imgbox.section-full__imgbox-bottom
-        img(src="./../img/svg/contact-vector-right.svg", alt="")
+        img(src="./img/svg/contact-vector-right.svg", alt="")
         .section-full__imgbox.section-full__imgbox-light
-            img(src="./../img/svg/light.svg", alt="")
+            img(src="./img/svg/light.svg", alt="")
