delete popups --test

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -31,12 +31,12 @@ block content
     include ./../includes/modules/contact-section/contact-section
     include ./../includes/modules/footer/footer
 
-    include ./../includes/modules/popups/calculation-popup/calculation-popup
-    include ./../includes/modules/popups/order-popup/order-popup
-    include ./../includes/modules/popups/specification-popup/specification-popup
-    include ./../includes/modules/popups/thanks-order-popup/thanks-order-popup
-    include ./../includes/modules/popups/thanks-contact-popup/thanks-contact-popup
-    .popup__overlay
+    //- include ./../includes/modules/popups/calculation-popup/calculation-popup
+    //- include ./../includes/modules/popups/order-popup/order-popup
+    //- include ./../includes/modules/popups/specification-popup/specification-popup
+    //- include ./../includes/modules/popups/thanks-order-popup/thanks-order-popup
+    //- include ./../includes/modules/popups/thanks-contact-popup/thanks-contact-popup
+    //- .popup__overlay
 
 
 append scripts
