change bg to first section

--- a/src/includes/modules/first-section/first-section.styl
+++ b/src/includes/modules/first-section/first-section.styl
@@ -4,6 +4,8 @@
         min-height 100vh
         position relative
         overflow hidden
+        background url(../img/first-section-bg@2x.jpg) no-repeat center
+        background-size cover
 
         .btn
             margin-top 25px
