fix popup animate

--- a/src/includes/modules/popups/popups.styl
+++ b/src/includes/modules/popups/popups.styl
@@ -86,7 +86,7 @@
         box-sizing border-box
         opacity 0
         transform translateY(-100%)
-        transition all 800ms ease
+        transition opacity 800ms ease, transform 800ms ease
 
         @media(max-width 767px)
             padding 72px 24px 40px
