change popup animate --test

--- a/src/includes/core/styl/core.styl
+++ b/src/includes/core/styl/core.styl
@@ -91,6 +91,7 @@ img
     .popup__dialog
         opacity 1
         transform translateY(0)
+        transition opacity 11800ms ease, transform 11800ms ease
 
 .swiper-pagination-bullet
     width 8px
