--- a/src/includes/modules/animate.styl
+++ b/src/includes/modules/animate.styl
@@ -201,6 +201,21 @@ $time = 800ms
                     transition-delay 0
 
 
+.popup
+    opacity 0
+    visibility hidden
+
+.show
+    opacity 1 !important
+    visibility visible !important
+    transition opacity 800ms ease, transform 800ms ease
+
+    .popup__dialog
+        opacity 1
+        transform translateY(0)
+        transition opacity 800ms ease, transform 800ms ease
+
+
 
 
 
