--- a/src/includes/modules/header/header.pug
+++ b/src/includes/modules/header/header.pug
@@ -1,5 +1,7 @@
 header.header
     .box-center
         .header__logo
-            img(src="./img/home/logo-white-bg@x2.png", alt="Zooov")
+            picture
+                source(srcset="./img/home/logo-white-bg@x2.webp", type="image/webp")
+                img(src="./img/home/logo-white-bg@x2.png", alt="Zooov")
         include menu/nav-list
