optimization gulp tasks, fix text bugs

--- a/src/includes/modules/header/header.styl
+++ b/src/includes/modules/header/header.styl
@@ -30,7 +30,8 @@
                 border-bottom 2px solid $black
 
             &--show
-                border 0
+                @media(max-width 767px)
+                    border 0
 
             &:before
             &:after
