--- a/src/includes/modules/barf-section/barf-section.styl
+++ b/src/includes/modules/barf-section/barf-section.styl
@@ -7,6 +7,10 @@
             @media(max-width 1023px)
                 padding-top 80px
 
+        .diet-list__item
+            h4
+                opacity 1
+
     &__columns
         display flex
         justify-content space-between
